--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -25,9 +25,9 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-
+    needs : test
     steps:
-      - name: Get codes
+      - name: Get code
         uses: actions/checkout@v3
 
       - name: Install Node.js
