--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,10 +1,7 @@
 name: Deploy Project
-
 on:
-  push:
-    branches:
-      - main  
-
+  - push
+  - workflow_dispatch
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -25,12 +22,12 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs : test
+    needs: test  
     steps:
-      - name: Get code
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -38,8 +35,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run tests
-        run: npm test
-
-    
-
+      - name: Deploy to Production
+        run: |
+          # Replace this with your actual deployment script or command
+          echo "Deploying to production..."
+          # Example: if deploying to a service like AWS, Heroku, etc., add the necessary CLI commands
